# dask-cassandra-loader

./: .coveragerc  .travis.yml  .zenodo.json  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  NOTICE  README.rst  project_setup.rst  requirements.txt  setup.cfg  setup.py
dask_cassandra/: __init__.py  loader.py
dask_cassandra_loader/: CassandraConnector.py  CassandraLoadingQuery.py  CassandraOperators.py  CassandraTable.py  DaskCassandraLoader.py  PagedResultHandler.py  __init__.py  dask_cassandra_loader.py  loader.py
docs/: Makefile  conf.py  index.rst  make.bat  tutorial.cql  tutorial.rst
tests/: test_dask-cassandra-loader.py  test_dask.py  test_dask_cassandra_loader.py  test_lint.py
travis/: setup_cassandra.sh
