[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = dask_cassandra_loader

[tool:pytest]
testpaths = tests
addopts = -s

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html

[pycodestyle]
max_line_length = 120
max_doc_length = 120
